[project]
name = "secure-data-encryption"
version = "0.1.0"
description = "A secure data encryption app built with Streamlit."
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.8"

[tool.streamlit]
theme.base = "light"
theme.primaryColor = "#4CAF50"
theme.backgroundColor = "#FFFFFF"
theme.secondaryBackgroundColor = "#F0F2F6"
theme.textColor = "#000000"

